--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,38 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<div class="container">
+  <div class='title'>
+    <div class="row">
+      <h2 class="center">Linear Regression Predictor</h2>
+    </div>
+    <div class="row">
+        <p class="center">A Machine Learning and TensorFlow solution for predicting linear values.</p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4 col-sm-12">
+      <div class="row">
+        <div class="table-container" id="table-container">
+          <data-table 
+            [data]="data"
+            [columnTitles]="columnTitles"
+            (onTitlesChange)="updateTitles($event)"
+            (onValuesChange)="updateDataset($event)">
+          </data-table>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-8 col-sm-12">
+      <div class="row">
+        <graph-data 
+          [data]="data"
+          [columnTitles]="columnTitles">
+        </graph-data>
+      </div>
+      <div class="row" id="prediction-container">
+        <div class='center'>
+          <prediction [data]="data"></prediction>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
